fix overflows

--- a/src/static/styles/base.css
+++ b/src/static/styles/base.css
@@ -409,6 +409,7 @@ button:active {
     padding: 1rem;
     gap: 1rem;
     height: 100%;
+    min-height: 0;
 }
 
 .section-stacker {
